# fakon

./: .gitignore  .gitmodules  README.md
firmware/: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: airbag_control.rs  can_periodic.rs  can_queue.rs  can_utils.rs  car.rs  every.rs  fresh.rs  hardware.rs  ieb.rs  igpm.rs  lib.rs  main.rs  periodic.rs  periodic_tick.rs  repeater.rs  shift_control.rs  srscm.rs  unknown.rs
firmware/src/dbc/: .gitignore  mod.rs
hw-dev-breakout/: CONNECTIONS.md  fp-lib-table  hw-dev-breakout.kicad_dru  hw-dev-breakout.kicad_pcb  hw-dev-breakout.kicad_pro  hw-dev-breakout.kicad_sch  hw-dev-breakout.kicad_sym  inputs.kicad_sch  outputs.kicad_sch  sym-lib-table
hw-dev-breakout/hw-dev-breakout.3dshapes/: WAGO-250-220.wrl
hw-dev-breakout/hw-dev-breakout.pretty/: CONN-TH_250-220.kicad_mod  TestPoint_Pad_4.0x4.0mm.kicad_mod  WAGO 250-22.kicad_mod
