[package]
name = "fakon"

authors = [ "Angus Gratton <gus@projectgus.com" ]
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.1", features = [ "thumbv7-backend", "rtic-monotonics" ] }
stm32g4xx-hal = { git = "https://github.com/stm32-rs/stm32g4xx-hal.git", rev = "39eb64a", features = [ "stm32g474" ] }
rtic-monotonics = { version = "2.0", features = ["cortex-m-systick"] }
panic-abort = "0.3.2"
fugit = "0.3.7"
can-bit-timings = "1.1.0"
nb = "1.1.0"
heapless = "0.8.0"
rtic-sync = "1.3.0"
fdcan = { version = "0.2.0", features = ["fdcan_g0_g4_l5", "embedded-can-04"] }
can-bit-timings-core = "1.1.0"
byteorder = { version = "1.5.0", default-features = false }
hex-literal = "0.4.1"
inverted-pin = "0.2.0"
embedded-can = "0.4.1"
bitvec = { version = "1.0.1", features = ["atomic"], default-features = false }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }

[patch.crates-io]
fdcan = { path = "../../fdcan" }

[build-dependencies]
dbc-codegen = { git = "https://github.com/technocreatives/dbc-codegen", branch = "main", version = "0.3.0" }


