[package]
name = "fakon"
license = "MPL-2.0"
authors = [ "Angus Gratton <gus@projectgus.com" ]
edition = "2021"
version = "0.1.0"

[dependencies]
bitvec = { version = "1.0.1", features = ["atomic"], default-features = false }
can-bit-timings = "1.1.0"
can-bit-timings-core = "1.1.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
debouncr = "0.2.2"
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
embedded-can = "0.4.1"
enumflags2 = "0.7.10"
fdcan = { version = "0.2.0", features = ["fdcan_g0_g4_l5", "embedded-can-04"] }
fugit = { version = "0.3.7", features = ["defmt"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await", "cfg-target-has-atomic"] }
heapless = "0.8.0"
hex-literal = "0.4.1"
inverted-pin = "0.2.0"
nb = "1.1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.1", features = [ "thumbv7-backend", "rtic-monotonics" ] }
rtic-monotonics = { version = "2.0", features = ["cortex-m-systick"] }
rtic-sync = "1.3.0"
stm32g4xx-hal = { git = "https://github.com/stm32-rs/stm32g4xx-hal.git", rev = "39eb64a", features = [ "stm32g474" ] }

[package.metadata.cargo-shear]
ignored = ["can-bit-timings-core"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }

[patch.crates-io]
fdcan = { path = "../../fdcan" }

[build-dependencies]
dbc-codegen = { git = "https://github.com/technocreatives/dbc-codegen", branch = "main", version = "0.3.0" }

[patch."https://github.com/technocreatives/dbc-codegen"]
dbc-codegen = { path = "../../dbc-codegen" }
